# The-Apocalipse

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp
Classes/Effects/: effect.cpp  effect.hpp  effect_manager.cpp  effect_manager.hpp  healing_effect.cpp  healing_effect.hpp  hungry_effect.cpp
Classes/Entities/: entity.cpp  entity.hpp  player.cpp  player.hpp  zombie.cpp  zombie.hpp
Classes/Graphicals/: KeysManager.cpp  KeysManager.hpp  life_bar.cpp  life_bar.hpp  viewer.cpp  viewer.hpp
Classes/InteractiveObjects/: all_interactive_objects.hpp  interactive_object.cpp  roof.cpp  roof.hpp  tomb.cpp  tomb.hpp  wall.cpp  wall.hpp
Classes/Items/: item.cpp  item.hpp
Classes/Map/: animated_element.cpp  area.cpp  area_group.cpp  environment_element.cpp  map_element.cpp  map_element.hpp  map_manager.cpp  map_manager.hpp
Classes/Others/: Collision.cpp  Collision.hpp  bullet.cpp  bullet.hpp  container.cpp  container.hpp  pathfinding.cpp  pathfinding.hpp  perlin_noise.cpp  perlin_noise.hpp  probability.cpp  probability.hpp
Help/: contain_manager.cpp  debugging.cpp  font_manager.cpp  font_manager.hpp  texture_manager.cpp  texture_manager.hpp  the_apocalipse.cpp  the_apocalipse.hpp  thread_manager.cpp  thread_manager.hpp
headers/: main.hpp
headers/Effects/: all_effects.hpp  effect.hpp  effect_manager.hpp  hungry_effect.hpp
headers/Entities/: entity.hpp  player.hpp  zombie.hpp
headers/Graphicals/: KeysManager.hpp  life_bar.hpp  viewer.hpp
headers/Help/: contain_manager.hpp  debugging.hpp  the_apocalipse.hpp
headers/InteractiveObjects/: all_interactive_objects.hpp  interactive_object.hpp  tomb.hpp  wall.hpp
headers/Items/: all_items.hpp  item.hpp
headers/Map/: map_element.hpp  map_manager.hpp
headers/Others/: Collision.hpp  bullet.hpp  container.hpp  pathfinding.hpp  perlin_noise.hpp  probability.hpp
headers/window_menu/: add_player_window.hpp  game_over_window.hpp  game_pause_window.hpp  game_window.hpp  main_menu_window.hpp  play_window.hpp  world_settings.hpp
src/: main.cpp
src/Effects/: effect.cpp  effect_manager.cpp  healing_effect.cpp  hungry_effect.cpp
src/Entities/: entity.cpp  player.cpp  zombie.cpp
src/Graphicals/: KeysManager.cpp  life_bar.cpp  viewer.cpp
src/Help/: contain_manager.cpp  debugging.cpp  font_manager.cpp  texture_manager.cpp  (+2 more)
window_menu/: add_player_window.cpp  game_over_window.cpp  game_over_window.hpp  game_pause_window.cpp  game_window.cpp  main_menu_window.cpp  main_menu_window.hpp  play_window.cpp  player_data_window.cpp  player_data_window.hpp  set_lang_window.cpp  set_lang_window.hpp  world_settings.cpp
(+61 files in other folders)
